[workspace]
members = [
    "d3dx",
    "common",
    "luna_01_hello_direct3d",
    "luna_02_enum_display_adapters",
    "luna_03_gfx_stats_demo",
    "luna_04_sprite_demo",
    "luna_05_page_flip_demo",
    "luna_06_cube_demo",
    "luna_07_tri_grid_demo",
    "luna_08_mesh_demo",
    "luna_09_colored_cube_demo",
    "luna_10_colored_waves_demo",
    "luna_11_diffuse_demo",
    "luna_12_diffuse_pyramid_demo",
    "luna_13_diffuse_cube_demo",
    "luna_14_ambient_diffuse_demo",
    "luna_15_ambient_diffuse_specular_demo",
    "luna_16_point_light_demo",
    "luna_17_spotlight_demo",
    "luna_18_crate_demo",
    "luna_19_tiled_ground_demo",
    "luna_20_multi_tex_demo",
    "luna_21_sphere_cyl_tex_demo",
    "luna_22_cloud_demo",
    "luna_23_teapot_demo",
    "luna_24_teapot_texalpha_demo",
    "luna_25_gate_demo",
    "luna_26_stencil_mirror_demo",
    "luna_27_stencil_shadow_demo",
    "luna_28_x_file_demo",
    "luna_29_bounding_box_demo",
    "luna_30_robot_arm_demo",
    "luna_31_solar_system_demo",
    #"luna_32_skinned_mesh_demo",
    "luna_33_basic_terrain_demo",
    "luna_34_terrain_demo",
    "luna_35_camera_demo",
    "luna_36_walk_terrain_demo",
    "luna_37_culling_demo",
    "luna_38_props_demo",
    "luna_39_fire_ring_demo",
    "luna_40_rain_demo",
    "luna_41_sprinkler_demo"
]