[package]
name = "luna_01_hello_direct3d"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.0"
rand = "0.8.4"
regex = "1"

[build-dependencies]
cc = "1.0"

[dependencies.windows]
version = "0.27"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
