[package]
name = "luna_05_page_flip_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.0"

[dependencies.common]
path = "../common"

[dependencies.d3dx]
path = "../d3dx"

[dependencies.windows]
version = "0.27"
features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]